--- a/.config
+++ b/.config
@@ -23,7 +23,7 @@ CONFIG_FEED_telephony=n
 CONFIG_KERNEL_WERROR=n
 
 # IPv6支持:
-CONFIG_IPV6=y
+# CONFIG_IPV6=y
 
 # Applications
 
@@ -62,16 +62,16 @@ CONFIG_PACKAGE_nano=y
 CONFIG_XRAY_PROVIDE_V2RAY=y
 CONFIG_V2RAY_CORE_COMPRESS_UPX=n
 CONFIG_XRAY_CORE_COMPRESS_UPX=n
-CONFIG_PACKAGE_zram-swap=y
+# CONFIG_PACKAGE_zram-swap=y
 CONFIG_PACKAGE_kmod-lib-lz4=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_NODEJS_14=y
 
-CONFIG_OPENSSL_OPTIMIZE_SPEED=y
-CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
-CONFIG_OPENSSL_ENGINE_BUILTIN=y
-CONFIG_OPENSSL_ENGINE_BUILTIN_AFALG=y
-CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
+# CONFIG_OPENSSL_OPTIMIZE_SPEED=y
+# CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
+# CONFIG_OPENSSL_ENGINE_BUILTIN=y
+# CONFIG_OPENSSL_ENGINE_BUILTIN_AFALG=y
+# CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
 
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_XARGS_SUPPORT_REPL_STR=y
