--- a/.config
+++ b/.config
@@ -1,26 +1,22 @@
 
-CONFIG_GRUB_TIMEOUT="0"
-CONFIG_GRUB_CONSOLE=n
-CONFIG_TARGET_ROOTFS_EXT4FS=n
+# Target Config
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-CONFIG_TARGET_ROOTFS_CPIOGZ=n
-CONFIG_LUCI_CSSTIDY=n
-CONFIG_GRUB_CONSOLE=n
-CONFIG_SIGNED_PACKAGES=n
-CONFIG_SIGNATURE_CHECK=n
+# Set Firmware Size
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 
-# 设置固件大小:
-CONFIG_TARGET_ROOTFS_PARTSIZE=1004
-
-CONFIG_ALL_NONSHARED=y
-
-CONFIG_IB=y
-CONFIG_IB_STANDALONE=y
-CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
-
-CONFIG_FEED_telephony=n
-
-CONFIG_KERNEL_WERROR=n
+# Firmware Type
+# CONFIG_GRUB_CONSOLE is not set
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+# CONFIG_VMDK_IMAGES is not set
 
 # IPv6支持:
 # CONFIG_IPV6=y
